Quest Icon fix, Fixed custom data bugs

--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1956,6 +1956,11 @@
   literal: Lingjun  
 
 # Items and Minerals
+- raw: 金玉酿
+  result: Golden Jade Brew
+  badtrans: true
+  direct: Gold Jade Brew
+  literal: Jinyu Niang
 - raw: 小包子
   result: Little Steamed Bun
   badtrans: true
@@ -2720,6 +2725,16 @@
 
 
 # Names
+- raw: 相饮川
+  result:  Xiangyin Chuan
+  badtrans: true
+  direct: Drink together River
+  literal: Xiangyin Chuan
+- raw: 夏越
+  result: Xia Yue
+  badtrans: true
+  direct: Summer Surpassing
+  literal: Xia Yue
 - raw: 素怀
   result: Su Huai
   badtrans: true
