--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,34 @@
-﻿- raw: 鸡
+﻿- raw: 所以其实还是很疼你的嘛。
+  result: So actually, they still care about you a lot.
+  badtrans: true
+  direct: So actually still very dote on you ma.
+  literal: Suoyi qishi haishi hen teng ni de ma.
+- raw: （小声）家务事，咱们先看着。
+  result: (Whispering) It's a family matter, let's just watch for now.
+  badtrans: true
+  direct: (Small voice) Household matter, we first watch.
+  literal: (Xiao sheng) Jiawu shi, zanmen xian kan zhe.
+- raw: 我？说……说什么？
+  result: Me? Say... say what?
+  badtrans: true
+  direct: I? Say... say what?
+  literal: Wo? Shuo... shuo shenme?
+- raw: "你们这是？"
+  result: What are you doing?
+  badtrans: true
+  direct: You this is?
+  literal: Nimen zhe shi?
+- raw: "你是?"
+  result: Who are you?
+  badtrans: true
+  direct: You are?
+  literal: Ni shi?
+- raw: 我………
+  result: I...
+  badtrans: true
+  direct: I...
+  literal: Wo...
+- raw: 鸡
   result: Chicken
   badtrans: true
   direct: Chicken
